# math-lab

./: CMakeLists.txt  main.cpp
Source/: ConjunctionGradientSolver.cpp  ConjunctionGradientSolver.h  JacobiSolver.cpp  JacobiSolver.h  LUSolver.cpp  LUSolver.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
